# XiccXicNPi

./: CMakeLists.txt
dec_files/: b1_b2and3pi.dec  b1_b2and5pi.dec  b1_b2enu.dec  b1_b2enu_all_(wrong).dec
src/: EvtOmegaOmega.cpp  EvtOmegaOmega3pi.cpp  EvtWHad.cpp  EvtXiccXicNpi.cpp  evt.pdl  segR_omega.cc
src/EvtGenModels/: EvtOmegaOmega.hh  EvtOmegaOmega3pi.hh  EvtWHad.hh  EvtXiccXicNpi.hh
